--- a/docs/static/css/styles.css
+++ b/docs/static/css/styles.css
@@ -8,7 +8,7 @@ body {
 header {
     background-color: #333;
     color: white;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
@@ -47,4 +47,12 @@ button {
     margin-top: 20px;
     font-size: 1.2em;
     font-weight: bold;
+}
+
+#map {
+    height: 400px; 
+    width: 500px;
+    float: right;
+    margin: 30px;
+
 }
